feat:增加部分antd组件&更改部分代码

--- a/src/page/Middle/Slideshow/index.css
+++ b/src/page/Middle/Slideshow/index.css
@@ -66,6 +66,10 @@
 .ant-col .carouseIcon:hover {
   color: #333;
 }
+
+.ant-image {
+  display: block;
+}
 .CarouselLeftIcon {
   height: 100%;
   position: relative;
